Finish gallery section with Masonry

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -29,6 +29,7 @@
           />
           <!-- Default -->
           <img
+            class="container__img1 container__image"
             src="./images/gallery/gallery-pics01M.png"
             alt="Ice Cream on stick"
             style="width: auto"
@@ -63,6 +64,7 @@
           />
           <!-- Default -->
           <img
+            class="container__img2 container__image"
             src="./images/gallery/gallery-pics02M.png"
             alt="Ice Cream con"
             style="width: auto"
@@ -95,6 +97,7 @@
           />
           <!-- Default -->
           <img
+            class="container__img3 container__image"
             src="./images/gallery/gallery-pics03M.png"
             alt="Ice Cream on stick"
             style="width: auto"
@@ -129,6 +132,7 @@
           />
           <!-- Default -->
           <img
+            class="container__img4 container__image"
             src="./images/gallery/gallery-pics04M.png"
             alt="Ice Cream on stick"
             style="width: auto"
@@ -161,6 +165,7 @@
           />
           <!-- Default -->
           <img
+            class="container__img5 container__image"
             src="./images/gallery/gallery-pics05M.png"
             alt="Ice Cream on stick"
             style="width: auto"
@@ -195,6 +200,7 @@
           />
           <!-- Default -->
           <img
+            class="container__img6 container__image"
             src="./images/gallery/gallery-pics06M.png"
             alt="Ice Cream on stick"
             style="width: auto"
@@ -227,6 +233,7 @@
           />
           <!-- Default -->
           <img
+            class="container__img7 container__image"
             src="./images/gallery/gallery-pics07M.png"
             alt="Ice Cream on stick"
             style="width: auto"
@@ -261,6 +268,7 @@
           />
           <!-- Default -->
           <img
+            class="container__img8 container__image"
             src="./images/gallery/gallery-pics08M.png"
             alt="Ice Cream on stick"
             style="width: auto"
@@ -293,6 +301,7 @@
           />
           <!-- Default -->
           <img
+            class="container__img9 container__image"
             src="./images/gallery/gallery-pics09M.png"
             alt="Ice Cream on stick"
             style="width: auto"
@@ -327,6 +336,7 @@
           />
           <!-- Default -->
           <img
+            class="container__img10 container__image"
             src="./images/gallery/gallery-pics10M.png"
             alt="Ice Cream on stick"
             style="width: auto"
