--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,83 +1,130 @@
-// GLOBALL
+// GLOBAL IMPORT
+@import './main';
+
+// GALLERY SCSS
+
+.gallery-section {
+  background-color: #fff;
+}
 
 .container {
   max-width: 480px;
-  margin: auto;
-  padding: 0 15px;
 }
-
 .container__images {
-  display: flex;
+  max-width: 480px;
+  border-radius: 10%;
+  display: grid;
   align-items: center;
-  gap: 2.53px;
-}
+  justify-content: center;
+  gap: 1%;
+  grid-template-columns: 1fr 1fr 2fr 1fr 1fr 1fr;
 
-.container__first {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-}
-
-.container__second {
-  display: flex;
-  flex-direction: column;
-}
-
-.container__third {
-  display: flex;
-  flex-direction: column;
-}
-
-.container__fourth {
-  display: flex;
-  flex-direction: column;
-}
-
-.container__fifth {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 50px;
-}
-
-.container__sixth {
-  display: flex;
-  flex-direction: column;
-}
-
-.container__pic1,
-.container__pic2,
-.container__pic3,
-.container__pic4,
-.container__pic5,
-.container__pic6,
-.container__pic7,
-.container__pic8,
-.container__pic9,
-.container__pic10 {
-  transition-duration: 400ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover {
-    transform: scale(1.5);
+  &.container__first {
+    grid-area: first;
   }
+
+  &.container__second {
+    grid-area: second;
+  }
+
+  &.container__third {
+    grid-area: third;
+  }
+
+  &.container__fourth {
+    grid-area: fourth;
+  }
+
+  &.container__fifth {
+    grid-area: fifth;
+  }
+
+  &.container__sixth {
+    grid-area: sixth;
+  }
+}
+
+.container__image {
+  max-width: 100%;
+  height: 100%;
+}
+.container__img1,
+.container__img2,
+.container__img4 {
+  &:hover {
+    transform: scale(1.2) translate(-20px, -20px);
+    transition: transform 0.25s ease-in-out;
+    transition: cubic-bezier(0.3, 0, 0.3, 1) 250ms;
+  }
+}
+
+.container__img6,
+.container__img8,
+.container__img10 {
+  &:hover {
+    transform: scale(1.2) translate(20px, -20px);
+    transition: transform 0.25s ease-in-out;
+    transition: cubic-bezier(0.3, 0, 0.3, 1) 250ms;
+  }
+}
+
+.container__img7,
+.container__img9 {
+  &:hover {
+    transform: scale(1.2) translate(20px, 20px);
+    transition: transform 0.25s ease-in-out;
+    transition: cubic-bezier(0.3, 0, 0.3, 1) 250ms;
+  }
+}
+
+.container__img10 {
+  &:hover {
+    transform: scale(1.2) translate(20px, 0px);
+    transition: transform 0.25s ease-in-out;
+    transition: cubic-bezier(0.3, 0, 0.3, 1) 250ms;
+  }
+}
+
+.container__img1 {
+  &:hover {
+    transform: scale(1.2) translate(-20px, 0px);
+    transition: transform 0.25s ease-in-out;
+    transition: cubic-bezier(0.3, 0, 0.3, 1) 250ms;
+  }
+}
+
+.container__img3,
+.container__img5 {
+  &:hover {
+    transform: scale(1.2) translate(-20px, 20px);
+    transition: transform 0.25s ease-in-out;
+    transition: cubic-bezier(0.3, 0, 0.3, 1) 250ms;
+  }
+}
+
+.container__img3 {
+  padding-bottom: 30%;
+}
+.container__img9 {
+  padding-bottom: 30%;
 }
 
 // RESPONSIVE
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 481px) {
   .container {
-    max-width: 100vw; /* Maximul pentru tableta */
+    max-width: 768px; /* Maximul pentru tableta */
   }
   .container__images {
-    gap: 6.07px;
+    max-width: 768px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
   .container {
-    max-width: 100vw; /* Maximul pentru desktop */
+    max-width: 1200px; /* Maximul pentru desktop */
   }
   .container__images {
-    gap: 8px;
+    max-width: 1013px;
   }
 }
