--- a/src/partials/_products.scss
+++ b/src/partials/_products.scss
@@ -1,8 +1,10 @@
 .products {
+  width: 1280px;
 }
 .products-container {
-  max-width: 1280px;
-  padding: 16px 60px;
+  display: grid;
+  width: 1200px;
+  padding: 60px 16px;
 }
 .products__subheading {
   text-align: center;
@@ -30,6 +32,7 @@
   color: #d41443;
 }
 .products__grid {
+  padding: 0;
   display: flex;
   gap: 32px;
 }
@@ -86,14 +89,18 @@
   text-transform: uppercase;
   color: #ffffff;
 }
+.points {
+  display: flex;
+  justify-content: center;
+}
 .points::after {
   content: '...';
   display: block;
-  width: 100%;
-  text-align: center;
   color: #ffffff;
+  font-size: 50px;
 }
 .products__info {
+  margin: 0;
   padding: 32px;
   font-family: 'DM Sans';
   font-style: normal;
@@ -106,8 +113,18 @@
   color: #ffffff;
 }
 .products__button {
-  margin-left: 170px;
-  display: flex;
+  border-radius: 30%;
+  padding: 32px 165px 60px;
   border: 0;
   background-color: #ffb8ca;
+}
+.products--color-orange {
+  background-color: #f0d1a5;
+}
+.products--color-green {
+  background-color: #c2e297;
+}
+
+.is-hidden {
+  visibility: hidden;
 }
