--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,10 @@
 <link rel="stylesheet" href="./_products.scss" />
-
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Titan+One&display=swap"
+  rel="stylesheet"
+/>
 <section class="products">
   <div class="products-container">
     <p class="products__subheading">
@@ -15,17 +20,9 @@
           Indulge in our rich and creamy ice cream, handcrafted with all-natural
           ingredients and available in a variety of flavors.
         </p>
-        <button type="button" class="products__button">
+        <button type="button" class="products__button" data-modal-open>
           <img src="./images/arrow-right_4_360.png" alt="" />
         </button>
-        <div id="overlay1" class="products__description is-hidden">
-          <p class="overlay__description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </div>
       </li>
 
       <li class="products__item ice-coffee--background">
@@ -36,10 +33,10 @@
           Refresh and energize with our perfectly brewed iced coffee, made with
           high-quality beans and served over ice.
         </p>
-        <button type="button" class="products__button">
+        <button type="button" class="products__button products--color-orange">
           <img src="./images/arrow-right_4_360.png" alt="" />
         </button>
-        <div id="overlay1" class="products__description is-hidden">
+        <div style="display: none" class="products__description is-hidden">
           <p class="overlay__description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -57,21 +54,14 @@
           Satisfy your sweet tooth with our thick, made with premium ice cream,
           topped with whipped cream and your favorite toppings.
         </p>
-        <button type="button" class="products__button">
+        <button type="button" class="products__button products--color-green">
           <img
             class="products__button--position"
             src="./images/arrow-right_4_360.png"
             alt=""
           />
         </button>
-        <div id="overlay1" class="products__description is-hidden">
-          <p class="overlay__description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </div>
+        <div id="overlay1" class="products__description is-hidden"></div>
       </li>
     </ul>
   </div>
