--- a/src/partials/_products.scss
+++ b/src/partials/_products.scss
@@ -1,8 +1,8 @@
 .products {
-  width: 1280px;
+  width: 1200px;
 }
 .products-container {
-  display: grid;
+  display: flex;
   width: 1200px;
   padding: 60px 16px;
 }
@@ -32,7 +32,6 @@
   color: #d41443;
 }
 .products__grid {
-  padding: 0;
   display: flex;
   gap: 32px;
 }
@@ -107,7 +106,6 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 176%;
-  /* or 28px */
   text-align: center;
   letter-spacing: 0.04em;
   color: #ffffff;
@@ -124,7 +122,61 @@
 .products--color-green {
   background-color: #c2e297;
 }
-
 .is-hidden {
   visibility: hidden;
+}
+@media screen and (min-width: 768px) {
+  .products-container {
+    width: 768px;
+  }
+  .products__subheading {
+    font-size: 26px;
+    line-height: 30px;
+    margin-bottom: 18px;
+  }
+  .products__heading {
+    font-size: 48px;
+    line-height: 55px;
+    margin-bottom: 20px;
+  }
+  .products__grid {
+    gap: 16px;
+  }
+  .products__title {
+    font-size: 20px;
+    line-height: 23px;
+  }
+  .products__info {
+    font-size: 14px;
+    line-height: 176%;
+  }
+}
+@media screen and (min-width: 320px) {
+  .products-container {
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+  }
+  .products__subheading {
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom: 15px;
+  }
+  .products__heading {
+    font-size: 34px;
+    line-height: 39px;
+    margin-bottom: 8px;
+  }
+  .ice-coffee-img {
+    margin-top: -200px;
+  }
+  .products__title {
+    margin-top: 20px;
+    font-size: 20px;
+    line-height: 23px;
+  }
+  .products__info {
+    font-size: 14px;
+    line-height: 152%;
+  }
 }
