--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -6,18 +6,19 @@
 .container {
     display:flex;
     flex-direction:row;
-    gap:10px;
+    gap:2.53px;
     align-items:center;
 }
 
-.advantages {
-    &__icon {
-        width:44px;
-        height:50px;
+@media screen and (min-width:479px) {
+    .container {
+        gap:6px;
     }
+}
 
-    &__list {
-        list-style: none;
-
+@media screen and (min-width:768px) {
+    .container {
+        gap:8px;
+        padding-left:83px;
     }
 }
