--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,4 +2,5 @@
 @import './example';
 @import './components/about';
 @import './components/modal';
-@import './components/_gallery'
+@import './components/_gallery';
+@import './components/_advantages';
