last commit for today

--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -6,14 +6,17 @@
     </div>
     <div class="how-its-made__content">
       <picture class="how-its-made__content-image">
-        <source srcset="/assets/how-its-made_mobile.png" />
+        <source
+          media="(min-width:1200px)"
+          srcset="/assets/how-its-made_desktop.png"
+        />
         <source
           media="(min-width:768px)"
           srcset="/assets/how-its-made_tablet.png"
         />
         <source
-          media="(min-width:1200px)"
-          srcset="/assets/how-its-made_desktop.png"
+          media="(max-width:768px)"
+          srcset="/assets/how-its-made_mobile.png"
         />
         <img src="/assets/how-its-made_mobile.png" alt="Cow with milk" />
       </picture>
@@ -52,7 +55,9 @@
             <use href="/assets/icons_how-its-made.svg#icon-milk"></use>
           </svg>
           <h2 class="how-its-made__brief-description-title">721</h2>
-          <p class="how-its-made__brief-description-text">
+          <p
+            class="how-its-made__brief-description-text how-its-made__brief-description-text--milk"
+          >
             At 721 Cow, we're passionate about producing the highest quality ice
             cream possible.
           </p>
@@ -64,7 +69,9 @@
             <use href="/assets/icons_how-its-made.svg#icon-fruits"></use>
           </svg>
           <h2 class="how-its-made__brief-description-title">16kg</h2>
-          <p class="how-its-made__brief-description-text">
+          <p
+            class="how-its-made__brief-description-text how-its-made__brief-description-text--fruits"
+          >
             You can be sure you're getting a scoop of the freshest ice cream
             around.
           </p>
@@ -76,7 +83,9 @@
             <use href="/assets/icons_how-its-made.svg#icon-heart"></use>
           </svg>
           <h2 class="how-its-made__brief-description-title">84</h2>
-          <p class="how-its-made__brief-description-text">
+          <p
+            class="how-its-made__brief-description-text how-its-made__brief-description-text--heart"
+          >
             We use only the freshest, locally-sourced ingredients to make our 84
             unique and delicious flavors.
           </p>
