--- a/src/sass/sections/_how-its-made.scss
+++ b/src/sass/sections/_how-its-made.scss
@@ -1,37 +1,61 @@
 .how-its-made {
   background-color: #fff5f6;
+  @media screen and (min-width: 1200px) {
+    background-image: url('/assets/background_how-its-made_desktop.png');
+    background-repeat: no-repeat;
+    background-position: 50% 33%;
+  }
 }
 
 .container--how-its-made {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .how-its-made__title {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
   gap: 15px;
   margin-bottom: 32px;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
     gap: 16px;
     margin-bottom: 40px;
+    padding-left: 2px;
+  }
+  @media screen and (min-width: 1200px) {
+    gap: 16px;
+    margin-bottom: 60px;
+    padding-left: 80px;
   }
   &-first {
     font-size: 18px;
     line-height: 21px;
     color: #ffa5ba;
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+      font-size: 26px;
+      line-height: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      font-size: 30px;
+      line-height: 34px;
+      letter-spacing: 0.04em;
+    }
   }
   &-second {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
     font-size: 34px;
     line-height: 39px;
+    letter-spacing: 0.04em;
     color: #d41443;
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+      font-size: 48px;
+      line-height: 55px;
+    }
+    @media screen and (min-width: 1200px) {
+      font-size: 58px;
+      line-height: 66px;
+      letter-spacing: 0.06em;
+    }
   }
 }
 
@@ -39,10 +63,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.how-its-made__content-image {
-  margin-bottom: 40px;
+  gap: 40px;
+  @media screen and (min-width: 768px) and (max-width: 11200px) {
+    flex-direction: row;
+    gap: 32px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    gap: 99px;
+  }
 }
 
 .how-its-made__content-description-list {
@@ -51,17 +80,53 @@
   gap: 18px;
   padding: 0;
   margin-bottom: 40px;
+  @media screen and (max-width: 767.98px) {
+    background-image: url('/assets/background_how-its-made_mobile.png');
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    gap: 32px;
+  }
+  @media screen and (min-width: 1200px) {
+    gap: 32px;
+  }
   &-item {
     padding-right: 60px;
     font-weight: 500;
     font-size: 12px;
     line-height: 19px;
-    letter-spacing: 0.04em;
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+      padding: 0;
+    }
+    @media screen and (min-width: 1200px) {
+      padding-right: 88px;
+    }
     &--black {
       color: #000000;
+      @media screen and (min-width: 768px) and (max-width: 1200px) {
+        font-size: 14px;
+        line-height: 24px;
+        letter-spacing: 0.04em;
+      }
+      @media screen and (min-width: 1200px) {
+        font-size: 16px;
+        line-height: 28px;
+        letter-spacing: 0.04em;
+      }
     }
     &--gray {
       color: #907e82;
+      @media screen and (min-width: 768px) and (max-width: 1200px) {
+        font-size: 14px;
+        line-height: 27px;
+        letter-spacing: 0.04em;
+      }
+      @media screen and (min-width: 1200px) {
+        font-size: 14px;
+        line-height: 27px;
+        letter-spacing: 0.04em;
+      }
     }
   }
 }
@@ -81,11 +146,13 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 18px;
-  display: flex;
-  align-items: center;
-  text-align: center;
   color: #d41443;
   cursor: pointer;
+  @media screen and (min-width: 768px) and (max-width: 1200px),
+    screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 21px;
+  }
   &-icon {
     width: 8px;
     height: 14px;
@@ -94,6 +161,12 @@
 
 .how-its-made__brief-description {
   margin-top: 40px;
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    margin-top: 52px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 40px;
+  }
 }
 
 .how-its-made__brief-description-list {
@@ -101,17 +174,40 @@
   flex-direction: column;
   padding: 0;
   gap: 32px;
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    flex-direction: row;
+    gap: 19px;
+    padding-right: 105px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0;
+    padding: 0;
+  }
   &-item {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     gap: 16px;
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+      gap: 0;
+    }
+    @media screen and (min-width: 1200px) {
+      gap: 0;
+    }
   }
 }
 
 .how-its-made__brief-description-icon {
   fill: #ffa5ba;
   height: 50px;
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    margin-bottom: 36px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 40px;
+  }
   &--milk {
     width: 33px;
   }
@@ -128,6 +224,16 @@
   line-height: 41px;
   letter-spacing: 0.04em;
   color: #d41443;
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    margin-bottom: 13px;
+    font-size: 48px;
+    line-height: 55px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 16px;
+    font-size: 58px;
+    line-height: 66px;
+  }
 }
 
 .how-its-made__brief-description-text {
@@ -136,4 +242,42 @@
   line-height: 20px;
   letter-spacing: 0.02em;
   color: #000000;
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 28px;
+  }
+  &--milk {
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+      width: 165px;
+      height: 113px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 288px;
+      height: 79px;
+    }
+  }
+  &--fruits {
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+      width: 162px;
+      height: 94px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 317px;
+      height: 58px;
+    }
+  }
+  &--heart {
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+      width: 196px;
+      height: 94px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 288px;
+      height: 82px;
+    }
+  }
 }
