--- a/src/sass/utils/_base-how-its-made.scss
+++ b/src/sass/utils/_base-how-its-made.scss
@@ -30,18 +30,20 @@ image {
   display: block;
 }
 
-.container {
+.container--how-its-made {
   margin-left: auto;
   margin-right: auto;
   @media screen and (max-width: 768px) {
     width: 320px;
     padding: 60px 20px 66px;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
     width: 768px;
+    padding: 60px 34px 205px 32px;
   }
   @media screen and (min-width: 1200px) {
     width: 1200px;
+    padding: 60px 96px 179px 16px;
   }
 }
 
