--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,7 +27,7 @@
       </ul>
       <button class="nav__btn">
         Buy Now
-        <svg class="nav__btn__arrow">
+        <svg class="nav__btn__arrow"data-modal-open>
           <use href="images/sprite/icon/symbol-defs.svg#icon-arrow"></use>
         </svg>
       </button>
@@ -78,5 +78,12 @@
       </svg>
     </div>
     </section>
-  </header>
+      <div class="modal is-hidden" data-modal>
+      <div class="modal-content">
+        <button class="close-btn" data-modal-close>&times;</button>
+      </div>
+      </div>
+       <script src="js/modal.js" type="text/javascript"></script>
 </div>
+  </header>
+    
