--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -268,3 +268,63 @@
   text-align: right;
   color: #ffffff;
 }
+/*Modal*/
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(25, 28, 38, 0.5);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition:black;
+}
+
+.modal-content {
+  padding: 16px;
+  background: #fff;
+  width: 50%;
+  margin: 0 auto;
+  padding: 40px;
+  height: 500px;
+  text-align: center;
+  position: relative;
+}
+
+.is-hidden {
+  transform: scale(1.1);
+  visibility: hidden;
+}
+
+.close-btn {
+  background: red;
+  border: 1px solid #b01212;
+  color: white;
+  cursor: pointer;
+  outline: none;
+  position: absolute;
+  right: 16px;
+  top: 16px;
+  
+  border-radius: 50%;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+  background: #c61111;
+}
+.overlay p {
+  width: 100%;
+  margin-top: 10%;
+color:  #FFFFFF;;
+font-size: 18px;
+font-weight: 400;
+line-height: 28px;
+letter-spacing: 0.03em;
+text-align: center;
+
+}
