--- a/src/sass/_footer-containers.scss
+++ b/src/sass/_footer-containers.scss
@@ -5,16 +5,22 @@
 }
 
 /* Mobile */
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
   .contacts-section {
     min-width: 320px;
     background-image: linear-gradient(0deg, #fff5f6 0 83%, #fff 17% 0);
   }
+  .footer__container {
+    width: 320px;
+  }
 }
 
 /* Tablet */
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 769px) and (max-width: 1200px) {
   .contacts-section {
     background-image: linear-gradient(0deg, #fff5f6 65% 65%, #fff 35% 0);
+  }
+  .footer__container {
+    width: 772px;
   }
 }
