--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -8,15 +8,24 @@
       <picture class="how-its-made__content-image">
         <source
           media="(min-width:1200px)"
-          srcset="/assets/how-its-made_desktop.png"
+          srcset="
+            /assets/how-its-made_desktop.png,
+            /assets/how-its-made_desktop@2x.png 2x
+          "
         />
         <source
           media="(min-width:768px)"
-          srcset="/assets/how-its-made_tablet.png"
+          srcset="
+            /assets/how-its-made_tablet.png,
+            /assets/how-its-made_tablet@2x.png 2x
+          "
         />
         <source
           media="(max-width:768px)"
-          srcset="/assets/how-its-made_mobile.png"
+          srcset="
+            /assets/how-its-made_mobile.png,
+            /assets/how-its-made_mobile@2x.png 2x
+          "
         />
         <img src="/assets/how-its-made_mobile.png" alt="Cow with milk" />
       </picture>
