--- a/src/sass/sections/_how-its-made.scss
+++ b/src/sass/sections/_how-its-made.scss
@@ -153,6 +153,11 @@
     font-size: 16px;
     line-height: 21px;
   }
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+    transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+  }
   &-icon {
     width: 8px;
     height: 14px;
